@@ -65,7 +65,12 @@ Broadcast Variables and Accumulators: Manages shared variables used across nodes
 
 <hr style="border: 3px solid;">
 
-**<a href="https://github.com/sureshkannan19/apache-spark-with-java/tree/main/src/main/war/SparkApplication.java">Standalone mode</a>:**
+To let Spark access **java.base/sun.nio.cha** packages, else will get unaccessible error.
+```
+--add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+```
+
+**<a href="https://github.com/sureshkannan19/apache-spark-with-java/blob/main/src/main/java/jar/SparkJarApplication.java">Standalone mode</a>:**
 ```
 SparkSession.builder().master("local[*]").appName("SparkBasics").getOrCreate();
 ```
@@ -74,7 +79,7 @@ SparkSession.builder().master("local[*]").appName("SparkBasics").getOrCreate();
   Spark uses * option to partition the data and execute it parallel based on the number of logical cores. 
 * local[k] --> where k is hardcoded thread count, local[4]
 
-**<a href="https://github.com/sureshkannan19/apache-spark-with-java/tree/main/src/main/jar/SparkJarApplication.java">Cluster mode</a>:**
+**<a href="https://github.com/sureshkannan19/apache-spark-with-java/blob/main/src/main/java/war/SparkApplication.java">Cluster mode</a>:**
 ```
 SparkSession.builder().appName("SparkBasics").getOrCreate();
 ```
@@ -145,4 +150,4 @@ spark-submit yourjarname.jar
 
 After that, you can check cli console or Spark UI,
 where each instance metrics such as (time, memory, partitions) can be found.
-![img.png](emr_ec2_cluster_started.png)
+![img.png](SparkUI.png)
